added schema markup

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -27,6 +27,53 @@
   <meta name="twitter:description" content="Bathroom refits, tiling, plumbing and more across Ashford, Maidstone & beyond. Free quotes.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Bathroom Installations",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "Complete bathroom installation services including tiling, plumbing, and full refurbishments for homes in Kent."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Bathrooms",
+      "item": "https://www.aptbuilders.co.uk/bathrooms.html"
+    }
+  ]
+}
+</script>
+
+
+
 
 
   <link rel="stylesheet" href="styles/style.css" />
