--- a/blockpaving.html
+++ b/blockpaving.html
@@ -27,6 +27,53 @@
   <meta name="twitter:description" content="Block paving driveways, patios and repairs across Ashford, Maidstone, Canterbury & Kent.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Block Paving",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "Durable block paving solutions for driveways, patios, and paths. Fully designed and installed across Ashford and the Kent area."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Blockpaving",
+      "item": "https://www.aptbuilders.co.uk/blockpaving.html"
+    }
+  ]
+}
+</script>
+
+
+
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
