--- a/brickwork.html
+++ b/brickwork.html
@@ -27,6 +27,53 @@
   <meta name="twitter:description" content="New builds, repointing and garden walls – full brickwork services across Ashford, Maidstone, Canterbury & more.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Brickwork",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "All types of brickwork including walls, repairs, porches, and extensions for residential and commercial properties across Kent."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Brickwork",
+      "item": "https://www.aptbuilders.co.uk/brickwork.html"
+    }
+  ]
+}
+</script>
+
+
+
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
