--- a/decorating.html
+++ b/decorating.html
@@ -28,6 +28,53 @@
   <meta name="twitter:description" content="Wallpapering, painting and more – trusted decorators in Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Painting and Decorating",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "Interior and exterior painting and decorating for homes and businesses across Folkestone, Ashford, and beyond."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Painting and Decorating",
+      "item": "https://www.aptbuilders.co.uk/decorating.html"
+    }
+  ]
+}
+</script>
+
+
+
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
