--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 
 
-   <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="canonical" href="https://www.aptbuilders.co.uk/" />
   <meta property="og:title" content="A.P.T Builders">
-  <meta property="og:description" content="Reliable Builders in Kent">
+  <meta property="og:description" content="Reliable Building Services in Kent including Roofing, Kitchen & Bathroom Installations, Blockpaving, Landscaping, Brickwork, Painting & Decorating, Extensions, Conversions and all general building work.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <meta property="og:url" content="https://www.aptbuilders.co.uk/">
@@ -27,6 +27,53 @@
   <meta name="twitter:title" content="A.P.T Builders – Quality Building Services Across Kent">
   <meta name="twitter:description" content="Roofing, bathrooms, kitchens, landscaping & more across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "A.P.T Builders",
+  "image": "https://www.aptbuilders.co.uk/images/aptlogo.png",
+  "@id": "https://www.aptbuilders.co.uk/#aptbuilders",
+  "url": "https://www.aptbuilders.co.uk/",
+  "telephone": "07794083532",
+  "address": {
+    "addressLocality": "Ashford",
+    "addressRegion": "Kent",
+    "addressCountry": "GB"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 51.1465,
+    "longitude": 0.8738
+  },
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "08:00",
+      "closes": "17:00"
+    }
+  ],
+  
+  "description": "A.P.T Builders offer professional building including roofing, landscaping and groundworks, bathroom and kitchen fittings, brickwork, blockpaving, painting and decorating, extension and conversions services across Kent including Ashford, Folkestone, Maidstone and Canterbury."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "A.P.T Builders",
+  "url": "https://www.aptbuilders.co.uk/"
+}
+</script>
 
 
 
