--- a/roofing.html
+++ b/roofing.html
@@ -27,6 +27,55 @@
   <meta name="twitter:description" content="New roofs, repairs, and roofing maintenance in Ashford, Maidstone & more. Fully insured with 18+ years’ experience.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Roofing Services",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "High quality roofing services including pitched roofs, flat roofs, and repairs across Ashford, Folkestone, and the wider Kent area."
+}
+
+  
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Roofing",
+      "item": "https://www.aptbuilders.co.uk/roofing.html"
+    }
+  ]
+}
+</script>
+
+
+
   <link rel="stylesheet" href="styles/style.css" />
 
 </head>
