--- a/extensions.html
+++ b/extensions.html
@@ -28,6 +28,52 @@
   <meta name="twitter:description" content="Specialist house extensions and garage conversions in Ashford, Maidstone, Canterbury and Folkestone.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Extensions and Conversions",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "Expert home extensions, garage conversions, and loft builds for expanding your space across Kent."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Extensions and Conversions",
+      "item": "https://www.aptbuilders.co.uk/extensions.html"
+    }
+  ]
+}
+</script>
+
+
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 
