--- a/landscaping.html
+++ b/landscaping.html
@@ -27,6 +27,53 @@
   <meta name="twitter:description" content="From turfing to patios – expert landscaping services in Ashford, Maidstone, Canterbury & beyond.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Landscaping and Groundworks",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "A.P.T Builders",
+    "@id": "https://www.aptbuilders.co.uk/#aptbuilders"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Kent, UK"
+  },
+  "description": "Full landscaping and groundworks services including turfing, fencing, drainage, and patio installation throughout Kent."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://www.aptbuilders.co.uk/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Services",
+      "item": "https://www.aptbuilders.co.uk/services.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Landscaping",
+      "item": "https://www.aptbuilders.co.uk/landscaping.html"
+    }
+  ]
+}
+</script>
+
+
+
   <link rel="stylesheet" href="styles/style.css" />
 
 </head>
