--- a/extensions.html
+++ b/extensions.html
@@ -215,7 +215,7 @@
     </section>
 
 
-  <  <footer class="site-footer">
+    <footer class="site-footer">
       <div class="contact-us-container">
         <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
         <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
