--- a/bathrooms.html
+++ b/bathrooms.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="Expert bathroom fitting services across Kent. Serving Ashford, Maidstone, Canterbury & Folkestone – from complete renovations to plumbing, tiling & accessibility upgrades.">
+  <meta name="description" content="Expert bathroom fitting services across Kent. Serving Ashford, Maidstone, Canterbury & Folkestone, from complete renovations to plumbing, tiling & accessibility upgrades.">
   <meta name="keywords" content="bathroom fitters Kent, bathroom installation, shower fitting, bath replacement, bathroom tiling, accessible bathrooms, plumbing, Ashford, Maidstone, Canterbury, Folkestone">
   <meta name="robots" content="index, follow">
 
@@ -14,14 +14,14 @@
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="preload" as="image" href="images/bathroom-banner.png" importance="high" />
 
-  <!-- Open Graph (Facebook, LinkedIn etc.) -->
+  <
   <meta property="og:title" content="Bathroom Services in Kent | A.P.T Builders">
   <meta property="og:description" content="Bathroom installations & renovations across Kent. Showers, plumbing, tiling, layout redesigns and more.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/bathrooms.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card (for sharing previews on X/Twitter) -->
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Bathroom Services in Kent | A.P.T Builders">
   <meta name="twitter:description" content="Bathroom refits, tiling, plumbing and more across Ashford, Maidstone & beyond. Free quotes.">
