--- a/brickwork.html
+++ b/brickwork.html
@@ -14,17 +14,17 @@
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="preload" as="image" href="images/brickwork-banner.png" importance="high" />
 
-  <!-- Open Graph (Facebook/LinkedIn) -->
+ 
   <meta property="og:title" content="Brickwork Services in Kent | A.P.T Builders">
   <meta property="og:description" content="Expert bricklaying and repointing services across Kent. Reliable and experienced team.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/brickwork.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card -->
+  
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Brickwork Services in Kent | A.P.T Builders">
-  <meta name="twitter:description" content="New builds, repointing and garden walls – full brickwork services across Ashford, Maidstone, Canterbury & more.">
+  <meta name="twitter:description" content="New builds, repointing and garden walls, full brickwork services across Ashford, Maidstone, Canterbury & more.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <script type="application/ld+json">
