--- a/decorating.html
+++ b/decorating.html
@@ -15,17 +15,17 @@
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="preload" as="image" href="images/painting_10722140.png" importance="high" />
 
-  <!-- Open Graph (Facebook, LinkedIn) -->
+  
   <meta property="og:title" content="Painting & Decorating in Kent | A.P.T Builders">
-  <meta property="og:description" content="Expert interior & exterior decorating in Kent – from feature walls to full home painting projects.">
+  <meta property="og:description" content="Expert interior & exterior decorating in Kent, from feature walls to full home painting projects.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/decorating.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card -->
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Painting & Decorating Services in Kent | A.P.T Builders">
-  <meta name="twitter:description" content="Wallpapering, painting and more – trusted decorators in Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="twitter:description" content="Wallpapering, painting and more, trusted decorators in Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <script type="application/ld+json">
