--- a/gallery-page1.html
+++ b/gallery-page1.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="View A.P.T. Builders’ roofing gallery – expert roof repairs, new roof installations, pitched and flat roofs completed across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="View A.P.T. Builders roofing gallery. expert roof repairs, new roof installations, pitched and flat roofs completed across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="roofing gallery Kent, roof repairs, new roof installations, pitched roofs, flat roofs, Ashford roofers, Maidstone roof services, Folkestone roofing projects, Canterbury builders, APT Builders roofing">
   <meta name="robots" content="index, follow">
-  <title>Roofing Gallery | A.P.T Builders – Kent Roofing Projects in Ashford, Maidstone, Folkestone & Canterbury</title>
+  <title>Roofing Gallery | A.P.T Builders, Kent Roofing Projects in Ashford, Maidstone, Folkestone & Canterbury</title>
 
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page1.html" />
 
   
   <meta property="og:title" content="Roofing Gallery | A.P.T Builders">
-  <meta property="og:description" content="See completed roofing work from A.P.T Builders across Kent – repairs, replacements, flat roofs and more.">
+  <meta property="og:description" content="See completed roofing work from A.P.T Builders across Kent, repairs, replacements, flat roofs and more.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/gallery-page1.html">
   <meta property="og:type" content="website">
@@ -36,7 +36,7 @@
 
 
 <body>
-  <h1 class="visually-hidden">Roofing Project Gallery – A.P.T. Builders </h1>
+  <h1 class="visually-hidden">Roofing Project Gallery, A.P.T. Builders </h1>
 
 
   <div class="page-wrapper">
