--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Explore A.P.T. Builders’ bathroom gallery – showcasing fitted bathrooms, tiling, walk-in showers, bath refits and plumbing work across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Explore A.P.T. Builders bathroom gallery, showcasing fitted bathrooms, tiling, walk-in showers, bath refits and plumbing work across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="bathroom fitting, fitted bathrooms, bathroom gallery, Kent bathrooms, walk-in showers, bath refits, plumbing installations, bathroom renovation, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
-  <title>Bathroom Gallery | A.P.T. Builders – Fitted Bathrooms in Kent</title>
+  <title>Bathroom Gallery | A.P.T. Builders, Fitted Bathrooms in Kent</title>
 
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page2.html" />
 
-  <!-- Open Graph (Facebook, LinkedIn etc.) -->
+ 
   <meta property="og:title" content="Bathroom Gallery | A.P.T. Builders">
   <meta property="og:description" content="See our completed bathroom renovations across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/gallery-page2.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card -->
+  
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Bathroom Gallery | A.P.T. Builders">
   <meta name="twitter:description" content="Professional bathroom fittings and renovations in Kent. View completed work in our photo gallery.">
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Bathroom Project Gallery – A.P.T. Builders in Kent</h1>
+  <h1 class="visually-hidden">Bathroom Project Gallery, A.P.T. Builders in Kent</h1>
 
 
   <div class="page-wrapper">
