--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -9,31 +9,31 @@
   <meta name="keywords" content="bricklaying, brickwork gallery, wall building, pointing services, restoration, builders in Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
-  <title>Brickwork Gallery | A.P.T. Builders – Wall Building & Restoration Kent</title>
+  <title>Brickwork Gallery | A.P.T. Builders, Wall Building & Restoration Kent</title>
 
-  <!-- Canonical -->
+  
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page4.html" />
 
-  <!-- Open Graph (for Facebook, LinkedIn etc.) -->
+  
   <meta property="og:title" content="Brickwork Gallery | A.P.T. Builders">
   <meta property="og:description" content="View examples of expert brickwork: wall builds, repointing & restoration by A.P.T. Builders across Kent.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/gallery-page4.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card -->
+  
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Brickwork Gallery | A.P.T. Builders">
-  <meta name="twitter:description" content="Skilled brickwork across Kent – repointing, restoration & more from A.P.T. Builders.">
+  <meta name="twitter:description" content="Skilled brickwork across Kent, repointing, restoration & more from A.P.T. Builders.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
-  <!-- Favicon -->
+ 
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
-  <!-- Preload banner image if applicable -->
+ 
   <link rel="preload" as="image" href="images/brickwork-banner.png" importance="high">
 
-  <!-- Stylesheet -->
+  
   <link rel="stylesheet" href="styles/style.css" />
 
 </head>
