--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Painting & Decorating Gallery | A.P.T Builders – Interior & Exterior Finishes in Kent</title>
+  <title>Painting & Decorating Gallery | A.P.T Builders, Interior & Exterior Finishes in Kent</title>
 
   <meta name="description" content="Browse our painting and decorating gallery showcasing interior walls, exterior facades, and decorative finishes across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="painting gallery, decorating gallery, interior painting, exterior painting, wall finishes, Kent decorators, Ashford, Maidstone, Folkestone, Canterbury">
@@ -35,7 +35,7 @@
 
 
 <body>
-  <h1 class="visually-hidden">Painting & Decorating Gallery | A.P.T Builders – Interior & Exterior Finishes in Kent</h1>
+  <h1 class="visually-hidden">Painting & Decorating Gallery | A.P.T Builders, Interior & Exterior Finishes in Kent</h1>
 
   <div class="page-wrapper">
   
