--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>House Extensions Gallery | A.P.T Builders – Kent Home Extension Projects</title>
+  <title>House Extensions Gallery | A.P.T Builders, Kent Home Extension Projects</title>
 
   <meta name="description" content="Browse our gallery of house extensions, side returns, loft builds & rear expansions by A.P.T Builders across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="house extension gallery, Kent extensions, home expansion, rear extension, side return, loft extension, Ashford, Maidstone, Folkestone, Canterbury">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">House Extensions Gallery | A.P.T Builders – Home Expansion Projects in Kent</h1>
+  <h1 class="visually-hidden">House Extensions Gallery | A.P.T Builders, Home Expansion Projects in Kent</h1>
 
 
   <div class="page-wrapper">
