--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -26,7 +26,7 @@
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Specialist Builds Gallery | A.P.T Builders">
-  <meta name="twitter:description" content="From pools to custom extensions – specialist projects by A.P.T Builders in Kent.">
+  <meta name="twitter:description" content="From pools to custom extensions, specialist projects by A.P.T Builders in Kent.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <!-- Stylesheet -->
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Specialist Builds Gallery | A.P.T Builders – Bespoke Construction in Kent</h1>
+  <h1 class="visually-hidden">Specialist Builds Gallery | A.P.T Builders, Bespoke Construction in Kent</h1>
 
 
   <div class="page-wrapper">
