--- a/gallery.html
+++ b/gallery.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="Explore A.P.T. Builders’ gallery of completed projects: roofing, kitchen & bathroom fittings, landscaping, brickwork & block paving across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Explore A.P.T. Builders gallery of completed projects: roofing, kitchen & bathroom fittings, landscaping, brickwork & block paving across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="Kent building gallery, APT Builders projects, roofing gallery Kent, kitchen renovations Kent, bathroom fitting examples, landscaping projects Kent, block paving driveways, brickwork photos, Canterbury builders, Folkestone building work, Maidstone property renovations, Ashford construction services">
   
   <meta name="robots" content="index, follow">
 
-  <title>Project Gallery | A.P.T Builders – Roofing, Bathrooms, Kitchens & More in Kent</title>
+  <title>Project Gallery | A.P.T Builders, Roofing, Bathrooms, Kitchens & More in Kent</title>
 
   <!-- Favicon -->
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
@@ -19,7 +19,7 @@
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Project Gallery | A.P.T Builders">
-  <meta property="og:description" content="Browse our gallery of quality building work across Kent – roofing, bathrooms, kitchens, and more.">
+  <meta property="og:description" content="Browse our gallery of quality building work across Kent, roofing, bathrooms, kitchens, and more.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/gallery.html">
   <meta property="og:type" content="website">
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Project Gallery – Building Work by A.P.T. Builders in Kent</h1>
+  <h1 class="visually-hidden">Project Gallery, Building Work by A.P.T. Builders in Kent</h1>
 
 
   <div class="page-wrapper">
