--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">A.P.T Builders – Trusted Building Services in Kent</h1>
-  <h1 class="visually-hidden">Private Swimming Pool installation in Kent</h1>
+  <h1 class="visually-hidden">A.P.T Builders, Trusted Building Services in Kent</h1>
+  
 
 
  <div clas s="page-wrapper">
@@ -178,7 +178,7 @@
       <div class="banner-slide" style="background-image: url('images/bathroom-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/brickwork-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/blockpaving-hero-image.png');"></div>
-      <div class="banner-slide" style="background-image: url('images/landscaping-herp-banner.png');"></div>
+      <div class="banner-slide" style="background-image: url('images/landscaping-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/decorating-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/extension-hero-banner.png');"></div> 
        
