--- a/landscaping.html
+++ b/landscaping.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Landscaping and groundwork services in Kent – turfing, decking, patios, fencing & outdoor improvements across Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="description" content="Landscaping and groundwork services in Kent, turfing, decking, patios, fencing & outdoor improvements across Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="landscaping, garden landscaping, turfing, fencing, decking, patios, groundwork, outdoor design, garden improvements, Kent, Ashford, Maidstone, Canterbury, Folkestone">
   
   <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
 
   <!-- Open Graph (Facebook/LinkedIn) -->
   <meta property="og:title" content="Landscaping Services in Kent | A.P.T Builders">
-  <meta property="og:description" content="Professional landscaping and garden groundwork across Kent – patios, decking, fencing, and more.">
+  <meta property="og:description" content="Professional landscaping and garden groundwork across Kent, patios, decking, fencing, and more.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/landscaping.html">
   <meta property="og:type" content="website">
@@ -24,7 +24,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Landscaping Services in Kent | A.P.T Builders">
-  <meta name="twitter:description" content="From turfing to patios – expert landscaping services in Ashford, Maidstone, Canterbury & beyond.">
+  <meta name="twitter:description" content="From turfing to patios, expert landscaping services in Ashford, Maidstone, Canterbury & beyond.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <script type="application/ld+json">
