--- a/roofing.html
+++ b/roofing.html
@@ -16,7 +16,7 @@
 
   <!-- Open Graph -->
   <meta property="og:title" content="Roofing Services in Kent | A.P.T Builders">
-  <meta property="og:description" content="Expert roofing solutions for homes & businesses across Kent – repairs, installations, tile & slate work, chimney repointing.">
+  <meta property="og:description" content="Expert roofing solutions for homes & businesses across Kent, repairs, installations, tile & slate work, chimney repointing.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/roofing.html">
   <meta property="og:type" content="website">
@@ -24,7 +24,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Roofing Services in Kent | A.P.T Builders">
-  <meta name="twitter:description" content="New roofs, repairs, and roofing maintenance in Ashford, Maidstone & more. Fully insured with 18+ years’ experience.">
+  <meta name="twitter:description" content="New roofs, repairs, and roofing maintenance in Ashford, Maidstone & more. Fully insured with 18+ years experience.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <script type="application/ld+json">
