--- a/blockpaving.html
+++ b/blockpaving.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Expert block paving services across Kent – driveways, patios, paths, and repairs in Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="description" content="Expert block paving services across Kent, driveways, patios, paths, and repairs in Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="block paving, driveways, patios, paving repairs, garden paths, block paving Kent, Ashford, Maidstone, Canterbury, Folkestone">
   
   <meta name="robots" content="index, follow">
@@ -14,14 +14,14 @@
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="preload" as="image" href="images/blockpaving-banner.png" importance="high" />
 
-  <!-- Open Graph (Facebook/LinkedIn) -->
+  
   <meta property="og:title" content="Block Paving Services in Kent | A.P.T Builders">
-  <meta property="og:description" content="Driveways, patios and more – expert block paving services in Kent.">
+  <meta property="og:description" content="Driveways, patios and more, expert block paving services in Kent.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/blockpaving.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card -->
+  
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Block Paving Services in Kent | A.P.T Builders">
   <meta name="twitter:description" content="Block paving driveways, patios and repairs across Ashford, Maidstone, Canterbury & Kent.">
