--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -4,41 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Kitchen fitting gallery – cabinets, appliances & worktops by A.P.T Builders in Ashford, Maidstone, Folkestone & Canterbury.">
+ 
+  <meta name="description" content="Kitchen fitting gallery, cabinets, appliances & worktops by A.P.T Builders in Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="kitchen fitting Kent, kitchen renovation, kitchen installations, cabinet fitting, worktop installers, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
-  <title>Kitchens Gallery | A.P.T Builders – Fitted Kitchens in Kent</title>
+  <title>Kitchens Gallery | A.P.T Builders, Fitted Kitchens in Kent</title>
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page3.html">
 
-  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+
   <meta property="og:title" content="Kitchens Gallery | A.P.T Builders">
   <meta property="og:description" content="Bespoke kitchens, worktops, and fittings installed across Kent.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
   <meta property="og:url" content="https://www.aptbuilders.co.uk/gallery-page3.html">
   <meta property="og:type" content="website">
 
-  <!-- Twitter Card -->
+  
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Kitchens Gallery | A.P.T Builders">
   <meta name="twitter:description" content="Fitted kitchens and appliance installs by Kent builders across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
-  <!-- Favicon -->
+ 
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
-  <!-- Preload priority images -->
+  
   <link rel="preload" as="image" href="images/kitchen%20extension_fitting.jpg">
   <link rel="preload" as="image" href="images/kitchen%20extension_fitting2.jpg">
 
-  <!-- Stylesheet -->
+  
   <link rel="stylesheet" href="styles/style.css">
  </head>
 
 
   <body>
-    <h1 class="visually-hidden">Kitchens Gallery – A.P.T Builders</h1>
+    <h1 class="visually-hidden">Kitchens Gallery, A.P.T Builders</h1>
 
   <div class="page-wrapper">
   
