--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
  
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="A.P.T Builders – Quality Building Services Across Kent">
+  <meta name="twitter:title" content="A.P.T Builders, Quality Building Services Across Kent">
   <meta name="twitter:description" content="Roofing, bathrooms, kitchens, landscaping & more across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
@@ -86,7 +86,7 @@
   <link rel="preload" as="image" href="images/bathroom-hero-banner.png" importance="high" />
   <link rel="preload" as="image" href="images/kitchen-hero-banner.png" importance="high" />
   <link rel="preload" as="image" href="images/brickwork-hero-banner.png" importance="high" />
-  <link rel="preload" as="image" href="images/landscaping-herp-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/landscaping-hero-banner.png" importance="high" />
   <link rel="preload" as="image" href="images/blockpaving-hero-image.png" importance="high" />
   <link rel="preload" as="image" href="images/decorating-hero-banner.png" importance="high" />
   <link rel="preload" as="image" href="images/extension-hero-banner.png" importance="high" />
