--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -104,22 +104,25 @@
 
       <h2>Who We Are</h2>
       <p>A.P.T Builders is a construction and building services provider serving clients in Kent. This privacy policy outlines how we collect, use, and protect your information.</p>
+      <p><strong>Last updated:</strong> June 23, 2025</p>
 
-      <h2>What Data We Collect</h2>
+      <p>This Privacy Policy explains how A.P.T.Builders collects, uses, and protects your information when you visit our website.</p>
+
+      <h2>Information We Collect</h2>
       <p>We may collect the following information via our contact form:</p>
       <ul class="service-content">
-        <li>Full name</li>
-        <li>Email address</li>
-        <li>Phone number</li>
-        <li>Message content</li>
+        <li>Contact information submitted via forms (name, email, phone)</li>
+        <li>Technical data such as IP address, browser type, and usage through cookies</li>
+        
       </ul>
 
-      <h2>Why We Collect It</h2>
-      <p>We collect this data to:</p>
+      <h2>How We Use Your Information</h2>
+      <p>We use essential cookies for site functionality and analytics cookies to understand how users interact with our site. You can manage your cookie preferences using the banner when you first visit our site.</p>
+
       <ul class="service-content">
-        <li>Respond to your enquiries</li>
-        <li>Provide quotes and service information</li>
-        <li>Maintain records of communication</li>
+        <li>To respond to your enquiries</li>
+        <li>To improve our website and services</li>
+        <li>To comply with legal obligations</li>
       </ul>
 
       <h2>How Your Data Is Stored</h2>
@@ -134,8 +137,15 @@
       </ul>
 
       <h2>Cookies</h2>
-      <p>Our site does not currently use cookies. If this changes, we will update this policy accordingly.</p>
+    <p>We use essential cookies for site functionality and analytics cookies to understand how users interact with our site. You can manage your cookie preferences using the banner when you first visit our site.</p>
 
+     <h2>Data Sharing</h2>
+     <p>We do not sell or share your personal data with third parties, except as required by law or to provide our services (e.g. hosting providers).</p>
+
+     <h2>Your Rights</h2>
+     <p>You have the right to access, correct, or delete your personal data. To make a request, please contact us at: <a href="mailto:alan@aptbuilders.co.uk">alan@aptbuilders.co.uk</a></p>
+
+    
       <h2>Contact Us</h2>
       <p>If you have any questions about this policy or want to exercise your rights, please contact us:</p>
       <p><strong>Email:</strong> <a href="mailto:alan@aptbuilders.co.uk">alan@aptbuilders.co.uk</a><br>
