--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -439,6 +439,19 @@ document.addEventListener('DOMContentLoaded', () => {
     }
   };
 </script>    
+<script>
+  function handleCookieChoice(accepted) {
+    localStorage.setItem('cookiesAccepted', accepted ? 'true' : 'false');
+    document.getElementById('cookie-banner').style.display = 'none';
+  }
+
+  window.onload = function () {
+    const choice = localStorage.getItem('cookiesAccepted');
+    if (choice === 'true' || choice === 'false') {
+      document.getElementById('cookie-banner').style.display = 'none';
+    }
+  };
+</script>
 
 </body>
 </html>
