--- a/index.html
+++ b/index.html
@@ -616,6 +616,19 @@ document.addEventListener('DOMContentLoaded', () => {
     }
   };
 </script>
+<script>
+  function handleCookieChoice(accepted) {
+    localStorage.setItem('cookiesAccepted', accepted ? 'true' : 'false');
+    document.getElementById('cookie-banner').style.display = 'none';
+  }
+
+  window.onload = function () {
+    const choice = localStorage.getItem('cookiesAccepted');
+    if (choice === 'true' || choice === 'false') {
+      document.getElementById('cookie-banner').style.display = 'none';
+    }
+  };
+</script>
 
 
   
